[project]
name = "crashutils"
description = "A mixture of effects and quality of life nodes. Nodes: ImageGlitcher (gives an image a cool glitchy effect), ColorStylizer (highlights a single color in an image), QueryLocalLLM (queries a local LLM API though oobabooga), SDXLReslution (resolution picker for the standard SDXL resolutions, the complete list), SDXLResolutionSplit (splits the SDXL resolution into width and height). "
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrish-slingshot/CrasHUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "crash"
DisplayName = "CrasHUtils"
Icon = ""
